sets file casing to snake

--- a/Panel/network_filter_panel.html
+++ b/Panel/network_filter_panel.html
@@ -19,6 +19,7 @@
   <ol class='newspaper network-entries'>
       <li>Click Get Network Button to get network req/res</li>
   </ol>
-  <script src="NetworkFilter.js"></script>
+  <script src="set_global.js"></script>
+  <script src="network_filter.js"></script>
 </body>
 </html>
