begins splitting of code into different files

--- a/Panel/network_filter_panel.html
+++ b/Panel/network_filter_panel.html
@@ -20,6 +20,8 @@
       <li>Click Get Network Button to get network req/res</li>
   </ol>
   <script src="set_global.js"></script>
+  <script src="filters.js"></script>
+  <script src="render.js"></script>
   <script src="network_filter.js"></script>
 </body>
 </html>
