adds apply filter button to prevent yanking

--- a/Panel/network_filter_panel.html
+++ b/Panel/network_filter_panel.html
@@ -5,6 +5,7 @@
 <body>
 
   <button class='get-network'>Get Network</button>
+  <button id="apply-filters">Apply filters</button>
   <input type=text id='filterByContent' placeholder='Filter Entries By Content'>
   <input type=text id='filterByOtherInfo' placeholder='Filter By Other Info'>
   <input type="number" id="min" min="0"  placeholder='Min Body Size'>
